--- a/_includes/archive-single.html
+++ b/_includes/archive-single.html
@@ -61,7 +61,7 @@
     {% elsif post.citation %}
       <p>Recommended citation: {{ post.citation }}</p>
     {% elsif post.paperurl %}
-      <p><a href=" {{ post.paperurl }} ">Link to Publisher</a></p>
+      <p><a href="{{ post.paperurl }}">Link to Publisher</a> | <a href="{{ post.slidesurl }}">Download Paper</a></p>
     {% elsif post.slidesurl %}
       <p><a href="{{ post.slidesurl }}">Download Paper</a></p>
     {% endif %}
